# tfwr

./: .gitignore  MCP.md  README.md
tfwr-mcp/: README.md  pyproject.toml  server.py
tfwr-mcp-mod/: MCPBridge.csproj  Plugin.cs
